--- a/app/src/main/res/layout/video_call_fragment.xml
+++ b/app/src/main/res/layout/video_call_fragment.xml
@@ -28,14 +28,13 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_end="@dimen/spacing_mega" />
 
-    <Button
+    <ImageButton
         android:id="@+id/video_end_call_id"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:background="@drawable/round_button"
         android:gravity="center_vertical|center_horizontal"
-        android:text="@string/end"
-        android:textColor="#fff"
+        android:src="@drawable/ic_call_end_white"
         android:layout_marginTop="@dimen/spacing_medium"
         app:backgroundTint="@color/reject_red"
         app:layout_constraintTop_toBottomOf="@+id/guideline_bottom"
