--- a/app/src/main/res/layout/include_ongoing_call_section.xml
+++ b/app/src/main/res/layout/include_ongoing_call_section.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -31,16 +32,46 @@
         app:layout_constraintStart_toEndOf="@id/guideline_start"/>
 
     <ImageButton
-        android:id="@+id/mute_button_id"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="@dimen/spacing_medium"
-        android:layout_marginEnd="@dimen/spacing_huge"
+        android:id="@+id/loud_speaker_button_id"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:background="@android:color/transparent"
         android:backgroundTint="@color/white"
-        android:src="@drawable/ic_mic_off_black"
         android:gravity="center_vertical|center_horizontal"
-        app:layout_constraintEnd_toStartOf="@id/guideline_end"
-        app:layout_constraintTop_toBottomOf="@+id/call_timer_id" />
+        android:src="@drawable/ic_loud_speaker"
+        android:layout_marginTop="@dimen/spacing_medium"
+        android:layout_marginEnd="@dimen/spacing_medium"
+        app:layout_constraintTop_toBottomOf="@+id/end_call_id"
+        app:layout_constraintEnd_toStartOf="@+id/hold_button_id"
+         />
+
+    <ImageButton
+        android:id="@+id/mute_button_id"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:backgroundTint="@color/black"
+        android:gravity="center_vertical|center_horizontal"
+        android:src="@drawable/ic_mic_off_black"
+        android:layout_marginTop="@dimen/spacing_medium"
+        android:layout_marginStart="@dimen/spacing_medium"
+        android:background="@android:color/transparent"
+        app:layout_constraintTop_toBottomOf="@+id/end_call_id"
+        app:layout_constraintStart_toEndOf="@+id/hold_button_id"
+        />
+
+    <ImageButton
+        android:id="@+id/hold_button_id"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="@dimen/spacing_medium"
+        android:backgroundTint="@color/white"
+        android:src="@drawable/ic_hold_black"
+        android:gravity="center_vertical|center_horizontal"
+        android:background="@android:color/transparent"
+        app:layout_constraintTop_toBottomOf="@+id/end_call_id"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_start"
