UI file name fix, call option listeners implemented

--- a/app/src/main/res/layout/video_call_fragment.xml
+++ b/app/src/main/res/layout/video_call_fragment.xml
@@ -74,7 +74,7 @@
         android:layout_height="75dp"
         android:backgroundTint="@color/white"
         android:gravity="center_vertical|center_horizontal"
-        android:src="@drawable/ic_mic_off_black"
+        android:src="@drawable/ic_mic_off"
         android:layout_marginTop="@dimen/spacing_medium"
         android:layout_marginStart="@dimen/spacing_medium"
         android:background="@android:color/transparent"
@@ -88,7 +88,7 @@
         android:layout_height="75dp"
         android:layout_marginTop="@dimen/spacing_medium"
         android:backgroundTint="@color/white"
-        android:src="@drawable/ic_hold_black"
+        android:src="@drawable/ic_hold"
         android:gravity="center_vertical|center_horizontal"
         android:background="@android:color/transparent"
         app:layout_constraintTop_toBottomOf="@+id/video_end_call_id"
