Adjusted login params to allow for Token. View changes, SDK now allows for token login

--- a/app/src/main/res/layout/include_login_credential_section.xml
+++ b/app/src/main/res/layout/include_login_credential_section.xml
@@ -7,21 +7,29 @@
     android:paddingRight="16dp">
 
     <EditText
-        android:id="@+id/sip_token_id"
+        android:id="@+id/sip_username_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/login_token"
+        android:hint="@string/sip_username"
         android:singleLine="true"/>
 
     <EditText
-        android:id="@+id/token_caller_id_name_id"
+        android:id="@+id/password_id"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/password"
+        android:inputType="textPassword"
+        android:singleLine="true"/>
+
+    <EditText
+        android:id="@+id/caller_id_name_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/caller_id_name"
         android:singleLine="true"/>
 
     <EditText
-        android:id="@+id/token_caller_id_number_id"
+        android:id="@+id/caller_id_number_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/caller_id_number"
