--- a/app/src/main/res/layout/include_login_section.xml
+++ b/app/src/main/res/layout/include_login_section.xml
@@ -10,6 +10,7 @@
         android:id="@+id/token_login_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/spacing_small"
         android:text="@string/token_login"
         android:checked="false"
         android:textOff="@string/off"
@@ -37,7 +38,7 @@
         style="@style/buttonPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/spacing_huge"
+        android:layout_marginTop="@dimen/spacing_medium"
         android:text="@string/connect"
          />
 </LinearLayout>
