--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,7 +110,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/call_state_text_value" />
 
-    <include
+    <!-- <include
         android:id="@+id/ongoing_call_section_id"
         layout="@layout/include_ongoing_call_section"
         android:layout_width="0dp"
@@ -119,7 +119,16 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/call_state_text_value" />
+        app:layout_constraintTop_toBottomOf="@+id/call_state_text_value" /> -->
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment_call_instance"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/spacing_medium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/call_state_text_value"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_start"
