--- a/app/src/main/res/layout/include_incoming_call_section.xml
+++ b/app/src/main/res/layout/include_incoming_call_section.xml
@@ -23,12 +23,11 @@
         android:id="@+id/answer_call_id"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="@drawable/round_button"
+        android:background="@drawable/round_button_green"
         android:gravity="center_vertical|center_horizontal"
         android:src="@drawable/ic_call_white"
         android:layout_marginStart="@dimen/spacing_huge"
         android:layout_marginBottom="@dimen/spacing_huge"
-        app:backgroundTint="@color/telnyx_green"
         app:layout_constraintTop_toBottomOf="@+id/incoming_call_id"
         app:layout_constraintStart_toEndOf="@id/guideline_start"/>
 
@@ -36,12 +35,11 @@
         android:id="@+id/reject_call_id"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="@drawable/round_button"
+        android:background="@drawable/round_button_red"
         android:gravity="center_vertical|center_horizontal"
         android:src="@drawable/ic_call_end_white"
         android:layout_marginEnd="@dimen/spacing_huge"
         android:layout_marginBottom="@dimen/spacing_huge"
-        app:backgroundTint="@color/reject_red"
         app:layout_constraintTop_toBottomOf="@+id/incoming_call_id"
         app:layout_constraintEnd_toStartOf="@id/guideline_end"/>
 
