--- a/app/src/main/res/drawable/round_button_green.xml
+++ b/app/src/main/res/drawable/round_button_green.xml
@@ -2,12 +2,12 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape android:shape="oval">
-            <solid android:color="#fa09ad"/>
+            <solid android:color="@color/telnyx_green"/>
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="oval">
-            <solid android:color="#c20586"/>
+            <solid android:color="#1F7C5A"/>
         </shape>
     </item>
 </selector>
