--- a/app/src/main/res/layout/include_call_control_section.xml
+++ b/app/src/main/res/layout/include_call_control_section.xml
@@ -22,10 +22,9 @@
         android:layout_height="100dp"
         android:layout_marginBottom="@dimen/spacing_small"
         android:src="@drawable/ic_call_white"
-        android:background="@drawable/round_button"
+        android:background="@drawable/round_button_green"
         android:gravity="center_vertical|center_horizontal"
         android:layout_marginTop="@dimen/spacing_medium"
-        app:backgroundTint="@color/telnyx_green"
         app:layout_constraintStart_toStartOf="@id/guideline_start"
         app:layout_constraintEnd_toEndOf="@id/guideline_end"
         app:layout_constraintTop_toBottomOf="@id/call_input_id"/>
