WEBRTC-535 Add Test for empty credentials

--- a/app/src/main/res/layout/include_login_credential_section.xml
+++ b/app/src/main/res/layout/include_login_credential_section.xml
@@ -14,7 +14,7 @@
         android:singleLine="true"/>
 
     <EditText
-        android:id="@+id/password_id"
+        android:id="@+id/sip_password_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/password"
