--- a/app/src/main/res/layout/fragment_call_instance.xml
+++ b/app/src/main/res/layout/fragment_call_instance.xml
@@ -91,11 +91,10 @@
       layout="@layout/include_call_dialpad_section"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_marginTop="@dimen/spacing_small"
       android:visibility="invisible"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+      app:layout_constraintTop_toBottomOf="@id/call_timer_id" />
 
   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline_start"
