--- a/app/src/main/res/layout/fragment_call_instance.xml
+++ b/app/src/main/res/layout/fragment_call_instance.xml
@@ -35,14 +35,13 @@
       android:id="@+id/dial_pad_button_id"
       android:layout_width="75dp"
       android:layout_height="75dp"
+      android:layout_marginStart="32dp"
       android:background="@android:color/transparent"
       android:backgroundTint="@color/white"
       android:gravity="center_vertical|center_horizontal"
       android:src="@drawable/outline_dialpad_black_24"
-      android:layout_marginBottom="@dimen/spacing_medium"
-      android:layout_marginEnd="@dimen/spacing_medium"
-      app:layout_constraintBottom_toTopOf="@+id/loud_speaker_button_id"
-      app:layout_constraintEnd_toStartOf="@+id/end_call_id" />
+      app:layout_constraintStart_toEndOf="@+id/loud_speaker_button_id"
+      app:layout_constraintTop_toBottomOf="@+id/hold_button_id" />
 
   <ImageButton
       android:id="@+id/loud_speaker_button_id"
