--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,8 @@
         android:layout_height="36dp"
         android:layout_marginTop="@dimen/spacing_large"
         android:src="@drawable/ic_telnyx_logo"
+        android:focusable="true"
+        android:clickable="true"
         app:layout_constraintEnd_toStartOf="@id/guideline_end"
         app:layout_constraintStart_toEndOf="@id/guideline_start"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_id" />
