--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -122,6 +122,17 @@
         app:layout_constraintTop_toBottomOf="@+id/call_state_text_value" />
 
 
+
+    <include
+        android:id="@+id/incoming_active_call_section_id"
+        layout="@layout/include_incoming_activel_section"
+        android:layout_width="0dp"
+        android:layout_height="360dp"
+        android:layout_marginTop="@dimen/spacing_medium"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/call_state_text_value" />
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_call_instance"
         android:layout_width="0dp"
