--- a/app/src/main/res/layout/include_login_token_section.xml
+++ b/app/src/main/res/layout/include_login_token_section.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/loginTokenSectionView"
     android:orientation="vertical"
     android:paddingLeft="16dp"
     android:paddingRight="16dp">
