--- a/app/src/main/res/layout/include_incoming_activel_section.xml
+++ b/app/src/main/res/layout/include_incoming_activel_section.xml
@@ -26,12 +26,12 @@
         android:id="@+id/endAndAccept"
         android:clickable="true"
         android:layout_width="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/incoming_call_id"
-        android:layout_marginTop="@dimen/spacing_huge"
-        android:layout_marginStart="@dimen/spacing_huge"
-        android:layout_marginBottom="@dimen/spacing_huge"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/reject_current_call"
         app:layout_constraintStart_toEndOf="@id/guideline_start"
-        android:layout_height="wrap_content">
+        android:layout_marginTop="@dimen/spacing_huge"
+        android:layout_marginStart="@dimen/spacing_normal"
+        android:layout_marginBottom="@dimen/spacing_huge">
 
 
         <ImageView
@@ -62,22 +62,20 @@
         android:layout_height="wrap_content"
         android:text="@string/end_and_accept"
         android:layout_marginTop="15dp"
+        app:layout_constraintStart_toStartOf="@id/endAndAccept"
         app:layout_constraintEnd_toEndOf="@+id/endAndAccept"
-        app:layout_constraintTop_toBottomOf="@+id/endAndAccept"
-        android:layout_marginStart="@dimen/spacing_huge"
-        app:layout_constraintStart_toEndOf="@id/guideline_start"/>
+        app:layout_constraintTop_toBottomOf="@+id/endAndAccept"/>
 
     <RelativeLayout
         android:id="@+id/reject_current_call"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:clickable="true"
         app:layout_constraintTop_toBottomOf="@+id/incoming_call_id"
-        android:layout_marginTop="@dimen/spacing_huge"
-        android:layout_marginStart="@dimen/spacing_huge"
-        android:layout_marginEnd="@dimen/spacing_huge"
+        app:layout_constraintStart_toEndOf="@id/guideline_start"
         app:layout_constraintEnd_toStartOf="@id/guideline_end"
-        android:layout_marginBottom="@dimen/spacing_huge"
-        android:layout_height="wrap_content">
+        android:layout_marginTop="@dimen/spacing_huge"
+        android:layout_marginBottom="@dimen/spacing_huge">
 
         <ImageView
             android:layout_width="70dp"
@@ -92,18 +90,56 @@
 
 
     </RelativeLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/reject_incoming"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="@dimen/spacing_huge"
         app:layout_constraintTop_toBottomOf="@+id/reject_current_call"
         app:layout_constraintStart_toStartOf="@+id/reject_current_call"
+        app:layout_constraintEnd_toEndOf="@id/reject_current_call" />
+
+    <RelativeLayout
+        android:id="@+id/hold_and_accept"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:layout_constraintTop_toBottomOf="@+id/reject_current_call"
         app:layout_constraintEnd_toStartOf="@id/guideline_end"
-        />
+        android:layout_marginTop="@dimen/spacing_huge"
+        android:layout_marginEnd="@dimen/spacing_normal"
+        android:layout_marginBottom="@dimen/spacing_huge">
 
+        <ImageView
+            android:padding="10dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/round_button_red"
+            android:gravity="center_vertical|center_horizontal"
+            android:src="@drawable/ic_call_white"
+            />
+        <ImageView
+            android:padding="10dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginStart="40dp"
+            android:background="@drawable/round_button_green"
+            android:gravity="center_vertical|center_horizontal"
+            android:src="@drawable/ic_hold"
 
+            />
+
+    </RelativeLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/hold_and_accept"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/hold_and_accept"
+        app:layout_constraintStart_toStartOf="@+id/hold_and_accept"
+        app:layout_constraintEnd_toEndOf="@id/hold_and_accept" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_start"
