Implement ViewsCreate XML Module

--- a/app/src/main/res/drawable/splash_screen_background.xml
+++ b/app/src/main/res/drawable/splash_screen_background.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:opacity="opaque">
-    <item android:drawable="@color/dark_matter" />
+    <item android:drawable="@color/colorSecondary" />
     <item
-        android:drawable="@drawable/ic_telnyx_logo_light"
+        android:drawable="@drawable/telnyx_logo"
         android:gravity="center_horizontal|center_vertical"
         android:width="188dp"
         android:height="36dp"
