--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TelnyxAndroidWebRTCSDK" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Theme.TelnyxAndroidWebRTCSDK" parent="Theme.MaterialComponents.DayNight.Bridge">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/dark_matter</item>
-        <item name="colorPrimaryVariant">@color/teal_200</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryVariant">@color/colorSecondary</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="android:colorBackground">@color/background_color</item>
+
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/telnyx_green</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
