--- a/xmlapp/src/main/res/layout/credentials_layout.xml
+++ b/xmlapp/src/main/res/layout/credentials_layout.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="@dimen/spacing_normal"
     android:layout_height="match_parent">
 
     <TextView
@@ -155,7 +154,7 @@
         android:id="@+id/signInButton"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
-        android:text="@string/common_signin_button_text"
+        android:text="@string/sign_in"
         android:textAllCaps="false"
         android:layout_marginTop="@dimen/spacing_normal"
         style="@style/AddProfileButton"
