--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,12 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TelnyxAndroidWebRTCSDK" parent="Theme.MaterialComponents.DayNight.Bridge">
+    <style name="Theme.TelnyxAndroidWebRTCSDK" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryVariant">@color/colorSecondary</item>
+        <item name="colorPrimary">@color/dark_matter</item>
+        <item name="colorPrimaryVariant">@color/teal_200</item>
         <item name="colorOnPrimary">@color/white</item>
-        <item name="android:colorBackground">@color/background_color</item>
-
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/telnyx_green</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
@@ -15,5 +13,6 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/dark_matter</item>
         <item name="android:textColorSecondary">@color/white</item>
         <item name="colorControlNormal">#fff</item>
+
     </style>
 </resources>
