--- a/xmlapp/src/main/res/layout/credentials_layout.xml
+++ b/xmlapp/src/main/res/layout/credentials_layout.xml
@@ -12,7 +12,7 @@
         android:text="@string/token_login"
         android:layout_marginTop="@dimen/spacing_small"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerInfo"
+        app:layout_constraintTop_toTopOf="parent"
         />
 
     <LinearLayout
